api advanced