@@ -3,85 +3,63 @@ package jpabook.jpashop.api;
 import jakarta.validation.Valid;
 import jakarta.validation.constraints.NotEmpty;
 import jpabook.jpashop.domain.Member;
-import jpabook.jpashop.serivce.MemberService;
-import lombok.AllArgsConstructor;
+import jpabook.jpashop.dto.MemberListResponseDto;
+import jpabook.jpashop.dto.MemberResult;
+import jpabook.jpashop.dto.UpdateMemberRequest;
+import jpabook.jpashop.dto.UpdateMemberResponse;
+import jpabook.jpashop.service.MemberService;
 import lombok.Data;
 import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
+import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RestController
+@Slf4j
 @RequiredArgsConstructor
 public class MemberApiController {
 
     private final MemberService memberService;
 
-    //엔티티를 직접 노출해버림 -> 엔티티의 변경이 API 스펙에 영향을 미침
-    //필요에따라 엔티티에 프레젠테이션 계층을 위한 로직이 추가됨
-    //리스트만 반환해버리면서 Json 스펙의 확장이 불가능해진다
     @GetMapping("/api/v1/members")
-    public List<Member> memberV1(){
+    public List<Member> membersV1() {
         return memberService.findMembers();
     }
 
     @GetMapping("/api/v2/members")
-    public Result memberV2(){
+    public ResponseEntity<MemberResult> membersV2() {
         List<Member> findMembers = memberService.findMembers();
-        List<MemberDTO> collect = findMembers.stream()
-                .map(m -> new MemberDTO(m.getName()))
-                .collect(Collectors.toList());
-        return new Result<>(collect.size(),collect);
+        List<MemberListResponseDto> list = findMembers.stream()
+                .map(m -> new MemberListResponseDto(m.getName())).toList();
+        return ResponseEntity.ok(new MemberResult<>(list.size(),list));
     }
 
     @PostMapping("/api/v1/members")
-    public CreateMemberResponse saveMemberV1(@RequestBody @Valid Member member){
+    public CreateMemberResponse saveMemberV1(@RequestBody @Valid Member member) {
         Long id = memberService.join(member);
         return new CreateMemberResponse(id);
     }
 
-    // 절대 엔티티를 매개변수로 받거나 presentation 계층에서 쓰지마
     @PostMapping("/api/v2/members")
-    public CreateMemberResponse saveMemberV2(@RequestBody @Valid CreateMemberRequest request){
+    public CreateMemberResponse saveMemberV2(@RequestBody @Valid CreateMemberRequest request) {
         Member member = new Member();
         member.setName(request.getName());
+
         Long id = memberService.join(member);
         return new CreateMemberResponse(id);
     }
 
     @PutMapping("/api/v2/members/{id}")
-    public UpdateMemberResponse updateMemberV2(@PathVariable Long id,
-                                               @RequestBody @Valid UpdateMemberRequest request){
-        memberService.update(id, request.getName());
+    public ResponseEntity<UpdateMemberResponse> updateMemberV1(@PathVariable Long id,
+                                                               @RequestBody @Valid UpdateMemberRequest request) {
+        memberService.updateMember(id, request.getName());
         Member findMember = memberService.findOne(id);
-        return new UpdateMemberResponse(id, findMember.getName());
+        UpdateMemberResponse response = new UpdateMemberResponse(findMember.getId(), findMember.getName());
+        return ResponseEntity.ok(response);
     }
 
-    @Data
-    @AllArgsConstructor
-    static class Result<T>{
-        private int count;
-        private T data;
-    }
-
-    @Data
-    @AllArgsConstructor
-    static class MemberDTO{
-        private String name;
-    }
-
-    @Data
-    static class UpdateMemberRequest{
-        private String name;
-    }
-
-    @Data
-    @AllArgsConstructor
-    static class UpdateMemberResponse{
-        private Long id;
-        private String name;
-    }
     @Data
     static class CreateMemberRequest{
         @NotEmpty
@@ -89,8 +67,11 @@ public class MemberApiController {
     }
 
     @Data
-    @AllArgsConstructor
-    static class CreateMemberResponse{
+    static class CreateMemberResponse {
         private Long id;
+
+        public CreateMemberResponse(Long id) {
+            this.id = id;
+        }
     }
 }
